Implemented Klivans Solution for blogs :)

--- a/EksamenRazorPageFixed/Pages/Admin.cshtml
+++ b/EksamenRazorPageFixed/Pages/Admin.cshtml
@@ -258,8 +258,13 @@
 </div>
 
 
-
-
+<!-- Blog Form -->
+<div class="col-md-6">
+    <h1>Creating Blog</h1>
+    <form method="post">
+        <button type="submit" class="btn btn-primary col-md-6" asp-page-handler="CreatingBlog">Write a new blog</button>
+    </form>
+</div>
 
 
 
