--- a/EksamenRazorPageFixed/Pages/Blogs.cshtml
+++ b/EksamenRazorPageFixed/Pages/Blogs.cshtml
@@ -7,7 +7,7 @@
     <h3 class="accordion-body text-center">Our Blogs</h3>
     @foreach (var blog in Model.Blogs.Values)
     {
-        var imagePath = "/Images/BlogsImages/" + blog.BlogId + ".jpg";
+        var imagePath = "/Images/BlogImages/" + blog.BlogId + ".jpg";
 
         <div class="col-lg-4 card" style="width: 16rem;">
             <img src="@imagePath" class="card-img-top" alt="...">  
@@ -15,7 +15,10 @@
                 <h5 class="card-title">Title: @blog.BlogTitel</h5>
                 <p class="card-text">Author: @blog.Author.Name</p>
                 <p class="card-text">Publish date: @blog.Date</p>
-                <p class="card-text">@blog.BodyText</p>
+                <form method="post">
+                    <button type="submit" class="btn btn-primary" name="Id" value="@blog.BlogId" asp-page-handler="GetBlogsByButton">BlogInfo</button>
+                </form>
+
             </div>
         </div>
     }
