--- a/EksamenRazorPageFixed/Pages/Blogs.cshtml
+++ b/EksamenRazorPageFixed/Pages/Blogs.cshtml
@@ -7,7 +7,7 @@
     <h3 class="accordion-body text-center">Our Blogs</h3>
     @foreach (var blog in Model.Blogs.Values)
     {
-        var imagePath = "/Images/BlogImages/" + blog.BlogId + ".jpg";
+        var imagePath = "/Images/BlogImage/" + blog.BlogId + ".jpg";
 
         <div class="col-lg-4 card" style="width: 16rem;">
             <img src="@imagePath" class="card-img-top" alt="...">  
