Added enginetype classes. Its bad :( but works

--- a/EksamenRazorPageFixed/Pages/Admin.cshtml
+++ b/EksamenRazorPageFixed/Pages/Admin.cshtml
@@ -139,6 +139,11 @@
                             <label class="form-label">Last Maintenance date</label>
                             <input type="text" class="form-control" name="lastMaintenance" />
                         </div>
+                        <div class="mb-3">
+                            <label class="form-label">Engine Type</label>
+                            <input type="text" class="form-control" name="engineType" />
+                        </div>
+
                         <button type="submit" class="btn btn-primary" asp-page-handler="AddMotorBoat">Save</button>
                     </form>
                 </div>
@@ -177,7 +182,7 @@
                         <div class="mb-3">
                             <label class="col-md-12 col-form-label">Email</label>
                             <div class="col-md-12">
-                                <input type="text" class="form-control" name="email" />
+                                <input type="email" class="form-control" name="email" />
                             </div>
                         </div>
 
