--- a/EksamenRazorPageFixed/Pages/Blogs.cshtml
+++ b/EksamenRazorPageFixed/Pages/Blogs.cshtml
@@ -12,7 +12,7 @@
         <div class="col-lg-4 card" style="width: 16rem;">
             <img src="@imagePath" class="card-img-top" alt="...">  
             <div class="card-body">
-                <h5 class="card-title">Title: @blog.BlogTitel</h5>
+                <h5 class="card-title">Title:<br /> <b class="fw-lighter">@blog.BlogTitel</b></h5>
                 <p class="card-text">Author: @blog.Author.Name</p>
                 <p class="card-text">Publish date: @blog.Date</p>
                 <form method="post">
