First page layout....  :)

--- a/EksamenRazorPageFixed/Pages/Index.cshtml
+++ b/EksamenRazorPageFixed/Pages/Index.cshtml
@@ -3,3 +3,21 @@
 @{ 
     ViewData["Title"] = "Home page";
 }
+
+<!DOCTYPE html>
+<html lang="da">
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width">
+    <title>Baggrundsbillede til sektion</title>
+    <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+    <section class="baggrund-sektion">
+        <div class="tekst-container">
+            <h2>Hillerød Sejlklub</h2>
+            <p>Where the freedom of the wind meets the strength of community, together we navigate towards new adventures and unforgettable victories!</p>
+        </div>
+    </section>
+</body>
+</html>
